[gd_scene load_steps=8 format=3 uid="uid://o43k2vl0nf6h"]

[ext_resource type="Texture2D" uid="uid://br3mkbdxqkpdf" path="res://placeholder/hackerman2.jpeg" id="1_1vij2"]
[ext_resource type="Script" path="res://prefabs/yapper.gd" id="2_2ia1d"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_resource.gd" id="2_d1stb"]
[ext_resource type="Resource" uid="uid://b0chqyvrewc25" path="res://dialogue/Conversation a).dialogue" id="3_0rfda"]
[ext_resource type="Resource" uid="uid://dwxyplmbb8phb" path="res://dialogue/Conversation b).dialogue" id="4_xlf42"]
[ext_resource type="Texture2D" uid="uid://dfp60jhldygil" path="res://textures/Dialogue Box.png" id="6_pkv1w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6q4px"]
radius = 95.01

[node name="Yapper" type="Node2D" groups=["Yappers"]]
position = Vector2(684, 409)
script = ExtResource("2_2ia1d")
placeholder_dialogues = Array[ExtResource("2_d1stb")]([ExtResource("3_0rfda"), ExtResource("4_xlf42")])

[node name="AudibleDialogueZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudibleDialogueZone"]
shape = SubResource("CircleShape2D_6q4px")

[node name="Components" type="Node" parent="."]

[node name="DialogueHandler" type="Node" parent="Components"]

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(8, -5)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_1vij2")

[node name="DialogueStartTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="PauseBetweenDialogues" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="SpeechBuble" type="Sprite2D" parent="."]
position = Vector2(-43, -64)
scale = Vector2(0.105769, 0.225)
texture = ExtResource("6_pkv1w")

[connection signal="body_entered" from="AudibleDialogueZone" to="." method="_on_audible_dialogue_zone_body_entered"]
[connection signal="body_exited" from="AudibleDialogueZone" to="." method="_on_audible_dialogue_zone_body_exited"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
[connection signal="timeout" from="DialogueStartTimer" to="." method="_on_dialogue_start_timer_timeout"]
[connection signal="timeout" from="PauseBetweenDialogues" to="." method="_on_pause_between_dialogues_timeout"]
